Header: fixed z-index to make sure body elements go behind the float

--- a/src/scss/grommet-core/_objects.header.scss
+++ b/src/scss/grommet-core/_objects.header.scss
@@ -75,9 +75,6 @@ header.#{$grommet-namespace}header--primary {
       }
     }
   }
-  .#{$grommet-namespace}drop {
-       z-index: 51 !important;
-  }
 }
 
 .#{$grommet-namespace}header__container--float {
